--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,14 @@
 
       <plugin>
 
+        <groupId>com.mycila</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+
+      </plugin>
+
+
+      <plugin>
+
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
 
