--- a/pom.xml
+++ b/pom.xml
@@ -25,15 +25,20 @@
     <parent>
         <groupId>org.cavebeetle</groupId>
         <artifactId>parent-pom</artifactId>
-        <version>1</version>
+        <version>2-SNAPSHOT</version>
     </parent>
 
     <groupId>org.cavebeetle</groupId>
     <artifactId>parent-java-pom</artifactId>
-    <version>1</version>
+    <version>2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Parent Java POM</name>
+
+    <properties>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+    </properties>
 
     <build>
 
